# LogicPuzzlePlatform

./: .dockerignore  .gitignore  Makefile  README.md
parsers/: Dockerfile  lambda_handler.py  pyproject.toml
parsers/src/puzzle_parsers/: __init__.py  base.py  cell_classify.py  cell_extraction.py  grid_utils.py  llm_vision.py  models.py  ocr_utils.py  recognition.py  recognition_schemas.py  registry.py  validate.py  vision_utils.py
parsers/src/puzzle_parsers/combo_sudoku/: __init__.py  __main__.py  grid_detector.py  models.py  ocr.py  parser.py
parsers/src/puzzle_parsers/double_choco/: __init__.py  __main__.py  grid_detector.py  models.py  parser.py
parsers/src/puzzle_parsers/masyu/: __init__.py  __main__.py  grid_detector.py  models.py  parser.py
parsers/src/puzzle_parsers/nonogram/: __init__.py  __main__.py  grid_detector.py  models.py  parser.py
parsers/src/puzzle_parsers/nurimaze/: __init__.py  __main__.py  grid_detector.py  models.py  parser.py  symbol_classifier.py
parsers/src/puzzle_parsers/nuritwin/: __init__.py  __main__.py  grid_detector.py  models.py  parser.py
parsers/src/puzzle_parsers/pencils/: __init__.py  __main__.py  grid_detector.py  models.py  parser.py
parsers/src/puzzle_parsers/shakashaka/: __init__.py  __main__.py  grid_detector.py  models.py  parser.py
parsers/src/puzzle_parsers/slalom/: __init__.py  __main__.py  grid_detector.py  models.py  parser.py
parsers/src/puzzle_parsers/slitherlink/: __init__.py  __main__.py  grid_detector.py  models.py  (+1 more)
parsers/tests/: test_base.py  test_combo_sudoku.py  test_schema_consistency.py
(+143 files in other folders)
