[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "puzzle-parsers"
version = "0.1.0"
description = "Image parsers for logic puzzles"
requires-python = ">=3.10"
dependencies = [
    "Pillow>=10.0",
    "pydantic>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "ruff>=0.4",
]

[tool.hatch.build.targets.wheel]
packages = ["src/puzzle_parsers"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py310"
